[package]
name = "amphis"
version = "0.1.0"
authors = ["yito88 <yuji@phact-columba.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
toml = "0.5.6"
bincode = "1.3.1"
serde = { version = "1.0.115", features = ["derive"] }
crc = "1.8.1"
threadpool = "1.8.1"
thiserror = "1.0.20"
log = "0.4.11"
env_logger = "0.7.1"
