[package]
name = "amphis"
version = "0.1.0"
authors = ["yito88 <yuji@phact-columba.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bloomfilter = "1.0.3"
config = "0.11"
crossbeam-channel = "0.5.8"
memmap = "0.7.0"
bincode = "1.3.1"
serde = { version = "1.0.115", features = ["derive"] }
crc = "1.8.1"
thiserror = "1.0.20"
log = "0.4.11"
cfg-if = "0.1.10"
env_logger = "0.7.1"
mockall_double = "0.2.0"

[dev-dependencies]
mockall = "0.7.2"
tempfile = "3.2.0"
threadpool = "1.8.1"
