[package]
name = "amphis"
version = "0.1.0"
authors = ["yito88 <yuji@phact-columba.com>"]
edition = "2018"

[dependencies]
bincode = "1.3.1"
bloomfilter = "1.0.3"
config = "0.11"
cfg-if = "0.1.10"
crc = "1.8.1"
crossbeam-channel = "0.5.8"
env_logger = "0.7.1"
log = "0.4.11"
memmap = "0.7.0"
mockall_double = "0.2.0"
serde = { version = "1.0.115", features = ["derive"] }
thiserror = "1.0.20"

[dev-dependencies]
mockall = "0.7.2"
tempfile = "3.2.0"
threadpool = "1.8.1"
